--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,4 @@
 <h1>Lab Mongoose Movies</h1>
 <p>Welcome to Lab Mongoose Movies</p>
+<a href="/celebrities">All Celebrities</a>
+<a href="/movies">All Movies</a>
