Lab finished. All iterations

--- a/views/celebrities/index.hbs
+++ b/views/celebrities/index.hbs
@@ -3,6 +3,9 @@
 <form action="/celebrities/create" method="get">
   <button>Add Celebrity</button>
 </form>
+<form action="/" method="get">
+  <button>Home Page</button>
+</form>
 
 <ul>
   {{#each listOfCelebrities}}
