--- a/views/celebrities/single.hbs
+++ b/views/celebrities/single.hbs
@@ -7,6 +7,9 @@
 <form action="/celebrities/{{celebrity._id}}/edit" method="get">
   <button>Edit Profile</button>
 </form>
+<form action="/celebrities/{{celebrity._id}}/delete" method="post">
+  <button>Delete Profile</button>
+</form>
 
 <form action="/celebrities" method="get">
   <button>List of All Celebrities</button>
