--- a/views/movies/index.hbs
+++ b/views/movies/index.hbs
@@ -1,5 +1,12 @@
 <h2>List of Movies</h2>
 
+<form action="/movies/create" method="get">
+  <button>Add Movie</button>
+</form>
+<form action="/" method="get">
+  <button>Home Page</button>
+</form>
+
 <ul>
   {{#each listOfMovies}}
     <li>
