--- a/views/movies/create.hbs
+++ b/views/movies/create.hbs
@@ -5,8 +5,8 @@
   <label for="title-input">Title</label>
   <input id="title-input" type="text" name="title" placeholder="Title">
   <br/>
-  <input id="genre-input" type="text" name="genre" placeholder="genre">
   <label for="genre-input">Genre</label>
+  <input id="genre-input" type="text" name="genre" placeholder="Genre">
   <br/>
   <label for="plot-input">Plot</label>
   <input id="plot-input" type="text" name="plot" placeholder="Plot">
