--- a/views/movies/edit.hbs
+++ b/views/movies/edit.hbs
@@ -1,6 +1,6 @@
 <h2>Edit Movie Information</h2>
 
-<form action="/movies/{{movie._id}}" method="post">
+<form action="/movies/{{movie._id}}/edit" method="post">
   <label for="title-input">Title</label>
   <input id="title-input" type="text" name="title" value="{{movie.title}}">
   <br/>
