--- a/views/movies/single.hbs
+++ b/views/movies/single.hbs
@@ -1,16 +1,16 @@
 <h2>Movie Profile</h2>
 
-<h3>{{movie.name}},</h3>
-<h5>{{movie.occupation}}</h5>
-<h3>{{movie.catchPhrase}}</h3>
+<h3>{{movie.title}},</h3>
+<h5>{{movie.genre}}</h5>
+<h3>{{movie.plot}}</h3>
 
-<form action="/celebrities/{{movie._id}}/edit" method="get">
+<form action="/movies/{{movie._id}}/edit" method="get">
   <button>Edit Profile</button>
 </form>
 
-<form action="/celebrities" method="get">
-  <button>List of All Celebrities</button>
+<form action="/movies/{{movie._id}}/delete" method="post">
+  <button>Delete Movie</button>
 </form>
-<form action="/Movies" method="get">
+<form action="/movies" method="get">
   <button>List of All Movies</button>
 </form>
